# mcp-memu

./: .gitignore  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  server.py
resources/: __init__.py  prompts.py  vm_status.py
src/mcp_memu/: __init__.py  server.py
src/mcp_memu/resources/: __init__.py  vm_status.py
src/mcp_memu/tools/: __init__.py  apps.py  capture.py  compound.py  config.py  input.py  lifecycle.py  network.py  shell.py
src/mcp_memu/utils/: __init__.py  adb_helpers.py  memuc_instance.py
tools/: __init__.py  apps.py  capture.py  compound.py  config.py  input.py  lifecycle.py  network.py  shell.py
utils/: __init__.py  adb_helpers.py  memuc_instance.py
