[project]
name = "mcp-memu"
version = "0.1.0"
description = "MCP server for controlling MEmu Android Emulator — 68 tools for VM lifecycle, apps, UI interaction, screenshots, and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Satyam", email = "dev@satyam.dev"}]
keywords = ["mcp", "memu", "android", "emulator", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pymemuc>=0.6.0",
    "mcp[cli]>=1.0.0",
    "pillow>=12.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-memu = "mcp_memu.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memu"]
